# ai-news-aggregator

./: .gitignore  Dockerfile  LEARNINGS.md  README.md  architecture.mmd  daily_runner.py  main.py  pyproject.toml  render.yaml  requirements.txt
app/: .env  config.py  list_models.py  runner.py
app/agent/: curator.py  email_agent.py  summarizer.py  supervisor.ipynb  supervisor.py
app/agent/tools/: search_tool.py
app/database/: create_tables.py  migrate.py  models.py  repository.py  session.py
app/schemas/: anthropic.py  openai.py  youtube.py
app/scrapers/: anthropic.py  openai.py  youtube.py
app/services/: __init__.py  config.py  curator_service.py  email_digest_service.py  email_service.py  runner.py  scraper_service.py  summarizer_service.py
app/utils/: __init__.py  auth_utils.py
docker/: docker-compose.yml
